--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
               <header class="header">
                   <div class="contenedor">
                     <nav class="navbar .nav navbar-expand-lg navbar-dark  ">
-                        <div class="container-fluid">
+                        <div class=" img2 container-fluid">
                           <a class="navbar-brand" href="index.html"> <img src="Foto/AKIKO.jpeg" class="animate_animated animate__pulse" alt="Anime">  </a>
-                          <h1 class="animate_animated animate__pulse ">Akiko Anime</h1>
+                          <h1 class=" animado animate_animated animate__pulse ">Akiko Anime</h1>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                           </button>
-                          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                          <div class=" collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                               <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                                <a class="nav-link " aria-current="page" href="index.html">Inicio</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="pages/serie.html">Serie</a>
@@ -50,8 +50,8 @@
                       </nav>
                     </div>
               </header>
-                <div class="overflow-visible">
-                  <h1 class="m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Bienvenidos Akiko Anime</h1>
+                <div class=" overflow-visible">
+                  <h1 class=" ani m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Bienvenidos Akiko Anime</h1>
                 </div>
                   <main>
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -88,12 +88,12 @@
                       <h4>Nosotros: Pagina dedicada al mundo anime, aquí podrás encontrar contenido anime como serie, intro,mangas e imágenes, con contenido propio y material de internet.</h4>
                     </div>
                     <div class="overflow-visible">
-                      <h2 class="m-auto bg-info p-3   animate__animated animate__lightSpeedOutRight ">CATEGORIAS</h2>
+                      <h2 class="anima m-auto bg-info p-3   animate__animated animate__lightSpeedOutRight ">CATEGORIAS</h2>
                     </div>
                     <div class="container-fluid animate__animated animate__pulse">
                       <div class="row  m-3">
                           <div class="card card-fade col-10 col-md-5 col-xl-3 mb-1 bg-" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                              <img src="Foto/image.png" class="card-img-top mt-3" alt="Anime">
+                              <img src="Foto/image.png" class="card-img-top mt-3 m-auto" alt="Anime">
                               <div class="card-body">
                                   <h2 class="card-title">Anime</h2>
                                   <p class="card-text">El anime o アニメ es un término con el que se identifica en general a la animación de procedencia japonesa.Una de sus grandes virtudes es haber sabido seducir a públicos de cualquier gusto y edad.
@@ -103,7 +103,7 @@
                               </div>
                           </div>    
                           <div class="card card-fade col-10 col-md-5 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                              <img src="Foto/manga2.png" class="card-img-top mt-3" alt="Manga">
+                              <img src="Foto/manga2.png" class="card-img-top mt-3 m-auto" alt="Manga">
                               <div class="card-body">
                                   <h2 class="card-title ">Manga</h2>
                                   <p class="card-text">Little Witch Academia sigue la historia de Atsuko Kagari, una chica que sueña con convertirse en una bruja desde que es una niña.
@@ -113,7 +113,7 @@
                               </div>
                           </div> 
                           <div class="card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                              <img src="Foto/image5.png" class="card-img-top mt-3" alt="imagen">
+                              <img src="Foto/image5.png" class="card-img-top mt-3 m-auto" alt="imagen">
                               <div class="card-body">
                                   <h2 class="card-title">Imágenes</h2>
                                   <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -130,7 +130,7 @@
                 <div class="container">
                   
                   <div class="contenedor">
-                    <h4 class="animate_animated animate__flipS">
+                    <h4 class="anim animate_animated animate__flipS">
                       Akiko Anime
                     </h4>
                     <p class="texto">Esta página es propiedad de akiko anime.Todos los derechos reservados ©</p>
