--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,15 +23,15 @@
                 <div class="contenedor">
                   <nav class="navbar .nav navbar-expand-lg navbar-dark  ">
                       <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html"> <img src="../Foto/AKIKO.jpeg" class="animate_animated animate__pulse" alt="Anime">  </a>
-                        <h1 class="animate_animated animate__pulse ">Akiko Anime</h1>
+                        <a class="navbar-brand" href="../index.html"> <img src="../Foto/AKIKO.jpeg" class="animate_animated animate__pulse" alt="Anime"></a>
+                        <h1 class="animado animate_animated animate__pulse ">Akiko Anime</h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                           <ul class="navbar-nav">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                              <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="../pages/serie.html">Serie</a>
@@ -53,7 +53,7 @@
                   </div>
             </header>
               <div class="overflow-visible">
-                <h1 class="m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Bienvenidos Akiko Anime</h1>
+                <h1 class="ani m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Bienvenidos Akiko Anime</h1>
               </div>
             
                 <main class="container margin xs-12 container sm-6  p-4">
@@ -87,7 +87,7 @@
             <!--inicio footer-->
             <footer>
               <div class="contenedor">
-                <h4 class="animate_animated animate__flipS">
+                <h4 class="anim animate_animated animate__flipS">
                   Akiko Anime
                 </h4>
                 <p class="texto">Esta página es propiedad de akiko anime.Todos los derechos reservados ©</p>
