--- a/pages/manga.html
+++ b/pages/manga.html
@@ -23,14 +23,14 @@
                   <nav class="navbar .nav navbar-expand-lg navbar-dark  ">
                       <div class="container-fluid">
                         <a class="navbar-brand" href="../index.html"> <img src="../Foto/AKIKO.jpeg" class="animate_animated animate__pulse" alt="Anime">  </a>
-                        <h1 class="animate_animated animate__pulse ">Akiko Anime</h1>
+                        <h1 class="animado animate_animated animate__pulse ">Akiko Anime</h1>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                           <ul class="navbar-nav">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="../pages/serie.html">Serie</a>
@@ -52,14 +52,14 @@
                   </div>
             </header>
               <div class="overflow-visible">
-                <h1 class="m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Manga Akiko Anime</h1>
+                <h1 class="ani m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Manga Akiko Anime</h1>
               </div>
                 <main class="">
                   <div class="container-fluid animate__animated animate__pulse">
                     <div class="row_ row  m-3">
                         <div class="card_ card card-fade col-10 col-md-5 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
 
-                            <img src="../Foto/image (6).png" class="card-img-top mt-3" alt="Anime" >
+                            <img src="../Foto/image (6).png" class="card-img-top mt-3 m-auto" alt="Anime" >
                             
                             <div class="card-body">
                                 <h2 class="card-title">Little Witch Academia vol.1</h2>
@@ -70,7 +70,7 @@
                             </div>
                         </div>    
                         <div class="card_ card card-fade col-10 col-md-5 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                            <img src="../Foto/image (7).png" class="card-img-top mt-3" alt="Manga">
+                            <img src="../Foto/image (7).png" class="card-img-top mt-3 m-auto" alt="Manga">
                             <div class="card-body">
                                 <h2 class="card-title ">Little Witch Academia vol.2</h2>
                                 <p class="card-text">Little Witch Academia sigue la historia de Atsuko Kagari, una chica que sueña con convertirse en una bruja desde que es una niña.
@@ -80,7 +80,7 @@
                             </div>
                         </div> 
                         <div class="card_ card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                            <img src="../Foto/image (8).png" class="card-img-top mt-3" alt="imagen">
+                            <img src="../Foto/image (8).png" class="card-img-top mt-3 m-auto" alt="imagen">
                             <div class="card-body">
                                 <h2 class="card-title">Little Witch Academia vol.3</h2>
                                 <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="card_ card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                          <img src="../Foto/image (9).png" class="card-img-top mt-3" alt="imagen">
+                          <img src="../Foto/image (9).png" class="card-img-top mt-3 m-auto" alt="imagen">
                           <div class="card-body">
                               <h2 class="card-title">Little Witch Academia vol.4</h2>
                               <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -96,7 +96,7 @@
                           </div>
                       </div>
                       <div class="card_ card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                        <img src="../Foto/image (10).png" class="card-img-top mt-3" alt="imagen">
+                        <img src="../Foto/image (10).png" class="card-img-top mt-3 m-auto" alt="imagen">
                         <div class="card-body">
                             <h2 class="card-title">Little Witch Academia vol.5</h2>
                             <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="card_ card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                      <img src="../Foto/image (11).png" class="card-img-top mt-3" alt="imagen">
+                      <img src="../Foto/image (11).png" class="card-img-top mt-3 m-auto" alt="imagen">
                       <div class="card-body">
                           <h2 class="card-title">Little Witch Academia vol.6</h2>
                           <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -112,7 +112,7 @@
                       </div>
                   </div>
                   <div class="card_ card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                    <img src="../Foto/image (12).png" class="card-img-top mt-3" alt="imagen">
+                    <img src="../Foto/image (12).png" class="card-img-top mt-3 m-auto" alt="imagen">
                     <div class="card-body">
                         <h2 class="card-title">Little Witch Academia vol.7</h2>
                         <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="card_ card card-fade col-10 col-xl-3 mb-1" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
-                  <img src="../Foto/image (13).png" class="card-img-top mt-3" alt="imagen">
+                  <img src="../Foto/image (13).png" class="card-img-top mt-3 m-auto" alt="imagen">
                   <div class="card-body">
                       <h2 class="card-title">Little Witch Academia vol.8</h2>
                       <p class="card-text">Anya es una niña alegre, risueña e impresionable. Gracias a su habilidad telepática, suele sorprenderse e interesarle las cosas que puede ver o escuchar en la mente de otros.</p>
@@ -133,7 +133,7 @@
             <!--inicio footer-->
             <footer>
               <div class="contenedor">
-                <h4 class="animate_animated animate__flipS">
+                <h4 class="anim animate_animated animate__flipS">
                   Akiko Anime
                 </h4>
                 <p class="texto">Esta página es propiedad de akiko anime.Todos los derechos reservados ©</p>
