--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -36,17 +36,17 @@
                               <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="../pages/serie.html">Serie</a>
+                              <a class="nav-link" href="./serie.html">Serie</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="../pages/manga.html">Manga</a>
+                              <a class="nav-link" href="./manga.html">Manga</a>
                             </li>
                             
                             <li class="nav-item">
-                              <a class="nav-link" href="../pages/imagenes.html">Imágenes</a>
+                              <a class="nav-link" href="./imagenes.html">Imágenes</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                              <a class="nav-link" href="./contacto.html">Contacto</a>
                             </li>
                           </ul>
                         </div>
