--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <!-- SEO -->
     <meta name="description" content="En Akiko Anime, encontraras contenido del mundo anime como serie, intro, manga e imágenes. También contamos con diseños de imágenes únicos y mucho mas de entretención anime.">
     <meta name="keywords" content="AKIKO,ANIME,SERIE,INTRO,MANGA,IMÁGENES,ANYA,TANGIRU,LITTLE WITCH ACADEMIA">
-    <link rel="shortcut icon" href="./Foto/favicon.ico">
+    <link rel="shortcut icon" href="../Foto/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Ultra&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
                     <section id="contacto">
                         <h3>Contacto</h3>
                         <form>
-                          <div class="mb-3">
+                          <div class=" Nomb mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Nombre</label>
                             <input type="text" name="nombre" class="form-control" id="exampleFormControlInput1" placeholder="Francisco">
                           </div>
@@ -81,7 +81,7 @@
                             <textarea placeholder="Envia tu mensaje...." class="form-control" id="exampleFormControlTextarea1" name="mensaje" rows="10"></textarea>
                           </div>
                           <input type="text"  style="display:none" />
-                          <div class=" mb-3">
+                          <div class="button_ mb-3">
                             <button class="btn btn-info" type="button" aria-label="enviar datos">ENVIAR</button>
                           </div>
                         </form>
