--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO -->
-    <meta name="description" content="En Akiko Anime, encontraras contenido del mundo anime como serie, intro, manga e imágenes. También contamos con diseños de imágenes únicos y mucho mas de entretención anime.">
-    <meta name="keywords" content="AKIKO,ANIME,SERIE,INTRO,MANGA,IMÁGENES,ANYA,TANGIRU,LITTLE WITCH ACADEMIA">
-    <link rel="shortcut icon" href="./Foto/favicon.ico">
+    <meta name="description" content="En Akiko Anime, encontraras contenido del mundo anime como imágenes. También contamos con diseños de imágenes únicos y mucho mas de entretención anime.">
+    <meta name="keywords" content="AKIKO,ANIME,IMÁGENES,ANYA,TANGIRU,IMÁGENES PROPIA">
+    <link rel="shortcut icon" href="../Foto/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Ultra&display=swap" rel="stylesheet">
