--- a/index.html
+++ b/index.html
@@ -127,9 +127,7 @@
                               </div>
                           </div>
                       </div>
-                  </div>
-                     
-                                            
+                  </div>                   
                   </main>
               <!--inicio footer-->
               <footer>
@@ -144,6 +142,7 @@
                       <ul class="redes">
                         <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><img src="Foto/i.jpeg" alt="instagram" ></a></li>
                         <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><img src="Foto/face.png" alt="facebook"></a></li>
+                        <li class="ms-3"><a class="text-muted" href="index.html" target="_blank"><img src="Foto/favicon.ico" alt="inicio"></a></li>
                       </ul>
                   </div>
                   </div>
