--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,7 +65,7 @@
                         <form>
                           <div class=" Nomb mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                            <input type="text" name="nombre" class="form-control" id="exampleFormControlInput1" placeholder="Francisco">
+                            <input type="text" name="nombre" class="form-control" id="exampleFormControlInput1" placeholder="Cony">
                           </div>
                           <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Apellido</label>
@@ -98,6 +98,7 @@
                   <ul class="redes">
                     <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><img src="../Foto/i.jpeg" alt="instagram" ></a></li>
                     <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><img src="../Foto/face.png" alt="facebook"></a></li>
+                    <li class="ms-3"><a class="text-muted" href="../index.html" target="_blank"><img src="../Foto/favicon.ico" alt="inicio"></a></li>
                   </ul>
               </div>
               </div>
