--- a/pages/imagenes.html
+++ b/pages/imagenes.html
@@ -57,16 +57,84 @@
               <div class="overflow-visible">
                 <h1 class="ani m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Imágenes Akiko Anime</h1>
               </div>
-                <main class="container margin xs-12 container sm-6  p-4">
-                    <div class="galeria">
-                        <img src="../Foto/10.gif" class="img-fluid" alt="imagen">
-                        <img src="../Foto/image10.png" class="img-fluid" alt="imagen10">
-                        <img src="../Foto/image11.png" class="img-fluid" alt="imagen11">
-                        <img src="../Foto/image 12.png" class="img-fluid" alt="imagen12"> 
-                        <img src="../Foto/image 13.png" class="img-fluid" alt="imagen13">
-                        <img src="../Foto/image15.png" class="img-fluid" alt="imagen15">
-                    </div> 
-                </main>
+              <section class="container-fluid">
+                <div class="row">
+                    <div class=" col-md-6 p-1">
+                        <img src="../Foto/Foto anya forger.png" class="img_3  rounded-5  mb-5 ml-5" alt="Foto anya forger" width="100%">
+                    </div>
+                    <aside class="col-md-6 align-self-center">
+                        <div>
+                            <h3 class="subtitulos">Anya Forger</h3>
+                        </div>
+                        <div class="text-justify">
+                            <p class="pp">Anya Forger (アーニャ・フォージャー, Ānya Fōjā?) es uno de los protagonistas principales de Spy x Family y la hija adoptiva de Loid Forger y Yor Forger.
+                            </p>
+                        </div>
+                    </aside>
+                </div>
+            </section>
+            <section class="container-fluid">
+                <div class="row">
+                    <div class=" col-md-6 p-1">
+                        <img src="../Foto/Foto tanjiro kamado.png" class="img_3 rounded-5 mb-5 ml-5" alt="Foto tanjiro kamado" width="100%">
+                    </div>
+                    <aside class="col-md-6 align-self-center">
+                        <div>
+                            <h3 class="subtitulos">Tanjiro Kamado</h3>
+                        </div>
+                        <div class="text-justify">
+                            <p class="pp">Tanjirō Kamado es el protagonista de la serie de manga y anime Kimetsu no Yaiba. Tanjiro es un adolescente que emprende una búsqueda para restaurar la humanidad de su hermana, Nezuko, quien se convirtió en un demonio después de que su familia fuera asesinada por Muzan Kibutsuji.
+                            </p>
+                        </div>
+                    </aside>
+                </div>
+            </section>
+            <section class="container-fluid">
+                <div class="row">
+                    <div class=" col-md-6 p-1">
+                        <img src="../Foto/Foto nezuko kamado.jpg" class="img_3 rounded-5 mb-5 ml-5" alt="Foto nezuko kamado" width="100%">
+                    </div>
+                    <aside class="col-md-6 align-self-center">
+                        <div>
+                            <h3 class="subtitulos">Nezuko Kamado</h3>
+                        </div>
+                        <div class="text-justify">
+                            <p class="pp">Nezuko Kamado (竈門 禰豆子 Kamado Nezuko?) es un personaje ficticio del manga Kimetsu no Yaiba de Koyoharu Gotouge. Nezuko y su hermano mayor Tanjirō Kamado son los únicos sobrevivientes de un incidente en el que perdieron a toda su familia a causa de los demonios, con Nezuko transformándose en una demonio, pero aún mostrando sorprendentemente signos de emociones y pensamientos humanos. Después de un encuentro con Giyuū Tomioka, un hashira, Tanjirō comienza su búsqueda para ayudar a su hermana a convertirse en humana nuevamente y vengar la muerte de su familia.</p>
+                        </div>
+                    </aside>
+                </div>
+            </section>
+            <section class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 p-1">
+                        <img src="../Foto/Foto demon slayer.png" class="img_3 rounded-5 mb-5 ml-5" alt="Foto demon slayer" width="100%">
+                    </div>
+                    <aside class="col-md-6 align-self-center">
+                        <div>
+                            <h3 class="subtitulos">Demon Slayer: Kimetsu no Yaiba</h3>
+                        </div>
+                        <div class="text-justify">
+                            <p class="pp">Kimetsu no Yaiba, también conocida bajo su nombre en inglés Demon Slayer, es una serie de manga escrita e ilustrada por Koyoharu Gotōge, cuya publicación comenzó el 15 de febrero de 2016 en la revista semanal Shūkan Shōnen Jump de la editorial Shūeisha.</p>
+                        </div>
+                    </aside>
+                </div>
+            </section>
+            <section class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 p-1">
+                        <img src="../Foto/Foto kanao tsuri.png" class="img_3 rounded-5 mb-5 ml-5" alt="Foto kanao tsuri" width="100%">
+                    </div>
+                    <aside class="col-md-6 align-self-center">
+                        <div>
+                            <h3 class="subtitulos">Kanao Tsuyuri</h3>
+                        </div>
+                        <div class="text-justify">
+                            <p class="pp">Kanao es la Tsuguko de Kanae y Shinobu y ha sido entrenada personalmente por ambas en el arte del combate. Como tal, Kanao posee habilidades físicas, habilidades y destrezas sobrehumanas que potencialmente la marcan como futura miembro del grupo de los Pilares dentro del Cuerpo de Exterminio de Demonios.
+                            </p>
+                        </div>
+                    </aside>
+                </div>
+            </section>
             <!--inicio footer-->
             <footer>
               <div class="contenedor">
@@ -78,6 +146,7 @@
                   <ul class="redes">
                     <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><img src="../Foto/i.jpeg" alt="instagram" ></a></li>
                     <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><img src="../Foto/face.png" alt="facebook"></a></li>
+                    <li class="ms-3"><a class="text-muted" href="../index.html" target="_blank"><img src="../Foto/favicon.ico" alt="inicio"></a></li>
                   </ul>
               </div>
               </div>
