--- a/pages/serie.html
+++ b/pages/serie.html
@@ -57,28 +57,62 @@
               <div class="overflow-visible">
                 <h1 class="ani m-auto bg-info p-3   animate__animated animate__fadeIn animate__delay-1s">Serie Akiko Anime</h1>
               </div>
-                <main class="container margin xs-12 container sm-6  p-1">
-                  <div class="container-fluid vid">
-                    <div class="row">
-                      
-                        <video loop autoplay muted class="col-12">
-                            <source src="../Foto/anime.mp4" type="video/mp4">
-                        </video>
-                        <div class="vid__overlayText container-fluid">
-                            <h4 class="vid__title text-center">Intro</h4>
-                        </div>
+              <section class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 p-1">
+                        <img src="../Foto/10.gif" class="rounded mb-5 ml-5" alt="Foto anya forger" width="100%">
                     </div>
+                    <aside class="col-md-6 align-self-center">
+                        <div>
+                            <h3 class="subtitulos">Anya Forger</h3>
+                        </div>
+                        <div class="text-justify">
+                            <p>Anya Forger (アーニャ・フォージャー, Ānya Fōjā?) es uno de los protagonistas principales de Spy x Family y la hija adoptiva de Loid Forger y Yor Forger.
+                            </p>
+                        </div>
+                    </aside>
                 </div>
+            </section>
+           
+                <main class="container margin xs-12 container sm-6  p-1">
                 <div class="container-fluid vid">
                   <div class="row">
+                    <div class="vid__overlayText container-fluid">
+                      <h4 class="subtitulos vid__title text-center">Video Anya Forger</h4>
+                  </div>
                       <video loop autoplay muted class="col-12">
                           <source src="../Foto/HD.mp4" type="video/mp4">
                       </video>
-                      <div class="vid__overlayText container-fluid">
-                          <h4 class="vid__title text-center p-1">Intro 2</h4>
-                      </div>
                   </div>
+                  <aside class="col-md-12 align-self-center">
+                    <div>
+                        <h3 class="subtitulos">Anya Forger</h3>
+                    </div>
+                    <div class="text-justify">
+                        <p>La relación entre Loid y Anya es de padre e hija, solo que él no conoce el don de ella de leer mentes. Tuvieron un inicio difícil ya que ninguno ha dicho toda la verdad al otro. Pero es claro que la niña ve en este espía una figura paterna.
+                        </p>
+                    </div>
+                </aside>
               </div>
+              <div class="container-fluid vid">
+                <div class="row">
+                  <div class="vid__overlayText container-fluid">
+                    <h4 class="subtitulos vid__title text-center">Video Familia Forger</h4>
+                </div>
+                    <video loop autoplay muted class="col-12">
+                        <source src="../Foto/anime.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <aside class="col-md-12 align-self-center">
+                  <div>
+                      <h3 class="subtitulos">La Familia Forger</h3>
+                  </div>
+                  <div class="text-justify">
+                      <p>Ambos lograron adaptar y animar lo que Endo plasmó en las páginas del manga original. Algo que ha contribuido a tal éxito es el carisma de los personajes. La familia Forger destaca por sus particularidades y así puede darse a querer.
+                      </p>
+                  </div>
+              </aside>
+            </div>
                 </main>
             <!--inicio footer-->
             <footer>
@@ -91,6 +125,7 @@
                   <ul class="redes">
                     <li class="ms-3"><a class="text-muted" href="https://www.instagram.com" target="_blank"><img src="../Foto/i.jpeg" alt="instagram" ></a></li>
                     <li class="ms-3"><a class="text-muted" href="https://www.facebook.com" target="_blank"><img src="../Foto/face.png" alt="facebook"></a></li>
+                    <li class="ms-3"><a class="text-muted" href="../index.html" target="_blank"><img src="../Foto/favicon.ico" alt="inicio"></a></li>
                   </ul>
               </div>
               </div>
